♻️ refactor : Programing페이지 접근성 수정 및 이미지 alt 추가

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="장교수의 뉴스검색과 관련 프로그래밍 바로가기">
   <title>React App</title>
 </head>
 
