🐛 fix: 모바일 화면에서 input 클릭 시 확대 방지

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="장교수의 뉴스검색과 관련 프로그래밍 바로가기"
-    />
-    <title>Dev king</title>
-  </head>
 
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
+  <meta name="description" content="장교수의 뉴스검색과 관련 프로그래밍 바로가기" />
+  <title>Dev king</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
